<resources>
    <string name="app_name">ExecutiveSuit</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Jetzt kommen selbst deklarierte Strings \u00A0 -->
    <string name="text_businessworld">B U S I N E S S \u000A T I E S</string>
    <string name="text_copyright">\u00A9 2012 Stenzel \u0026 Führmann </string>
    <string name="skyline_description">Hier soll eine Skyline oder ein ähnliches Bild erscheinen um die Assoziation zur Finanz/Business/Management -Welt herzustellen</string>
    <string name="button_continue">continue</string>
    <string name="title_activity_display_message">MyMessage</string>
    <string name="title_activity_before_interview">The Company</string>
	<string name="text_welcome">Welcome to \u000A Nerdy Computer Systems Corporation.</string>
	<string name="Intro">The Nerdy Computer Systems Corporation Building is impressive. You walk into the Foyer and go to the Reception Lady. \u000A
	    She welcomes and guides you to the Personnels Office.</string>
	<string name="button_job1">Platzhalter</string>
	<string name="button_job2">Platzhalter</string>
	<string name="button_job3">Platzhalter</string>
	<string name="button_job4">Platzhalter</string>
	<string name="button_job5">Platzhalter</string>
	<string name="button_job6">Platzhalter</string>
	
	
	<!-- global Styles -->
	<string name="background_color">@color/Black</string>
	<string name="text_color">@color/LimeGreen</string>
	<string name="text_size_text_view">18sp</string>
	<string name="text_size_on_answer_button">14sp</string>
	
	
	
	<string name="jobD">Job Description</string>
	<string name="jobL">Job Level</string>
	<string name="eco">The economy is %1$s at the moment.</string>
	<string name="congratulation">Congratulations, %1$s!. You have the job of %2$s. The Following came in your morning email.</string>
	<string name="sorry">Sorry, %1$s!.</string>
	<string name="escf">Employee Status Change Form \u000A ----------------------------------------- \u000A Nerdy Computer Systems Corporation   \u000A \u000A</string>
	<string name="margin">10dp</string>
	
	<!-- Employee Status Change Form Strings -->
	<string name="emp_name">Employee Name: </string>
	<string name="cur_age">Employee Current Age:</string>
	<string name="emp_tenure">Employee tenure with NCSC:</string>
	<string name="new_job">New Job Title:</string>
	<string name="new_level">New Job Level:</string>
	<string name="new_salary">New Salary:</string>
	<string name="perks">Perks:</string>
	
	<string name="tperks">Perks: \u000A zgzgzo \u000A uzgusdfsdfs</string>
	
	
</resources>