<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/GridLayoutStyle">

    <TextView
        android:id="@+id/kopf"
        android:textIsSelectable="true"
        android:layout_width="fill_parent"
        android:layout_columnSpan="2"
        android:gravity="center"
        android:textColor="@string/text_color"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:gravity="left"
        android:text="@string/jobD"
        android:textColor="@string/text_color"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView 
        android:layout_width="wrap_content"
        android:layout_column="0"
        android:layout_gravity="right|top"
      
        android:layout_row="1"
        android:text="@string/jobL"
        android:textColor="@string/text_color"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="serif" />
    
    <Button
        android:id="@+id/button_job1"
        android:layout_width="fill_parent"
        android:layout_column="0"
        android:layout_row="2"
        android:onClick="answer"
        android:text="@string/button_job1"
        android:textColor="@string/text_color"
        android:textSize="14sp" />

    <Button
        android:id="@+id/button_job2"
        android:layout_width="fill_parent"
        android:layout_column="0"
        android:layout_row="3"
        android:onClick="answer"
        android:text="@string/button_job2"
        android:textColor="@string/text_color"
        android:textSize="14sp" />

    <Button
        android:id="@+id/button_job3"
        android:layout_width="fill_parent"
        android:layout_column="0"
        android:layout_row="4"
        android:onClick="answer"
        android:text="@string/button_job3"
        android:textColor="@string/text_color"
        android:textSize="14sp" />

    <Button
        android:id="@+id/button_job4"
        android:layout_width="fill_parent"
        android:layout_column="0"
        android:layout_row="5"
        android:onClick="answer"
        android:text="@string/button_job4"
        android:textColor="@string/text_color"
        android:textSize="14sp" />

    <Button
        android:id="@+id/button_job5"
        android:layout_width="fill_parent"
        android:layout_column="0"
        android:layout_row="6"
        android:onClick="answer"
        android:text="@string/button_job5"
        android:textColor="@string/text_color"
        android:textSize="14sp" />

    <Button
        android:id="@+id/button_job6"
        android:layout_width="fill_parent"
        android:layout_column="0"
        android:layout_row="7"
        android:onClick="answer"
        android:text="@string/button_job6"
        android:textColor="@string/text_color"
        android:textSize="14sp" />

    

</GridLayout>