<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:id="@+id/content">
    
    <ImageView android:id="@+id/image_skyline"
        	android:layout_weight="8"
        	android:contentDescription="@string/skyline_description"
        	android:layout_width="match_parent"
        	android:layout_height="0dp"
        	android:src="@drawable/john_hancock"
        	android:scaleType="fitXY"/>
    
    <TextView android:layout_width="fill_parent"
        		android:layout_height="0dp"
        		android:layout_weight="2"
        		android:id="@+id/text1"
        		android:text="@string/text_businessworld"
        		android:textSize="20sp"
        		android:textStyle="bold"
        		android:typeface="serif"
        		android:gravity="center"
        		android:textColor="@color/WhiteSmoke"
        		/>
    <TextView android:layout_width="fill_parent"
        		android:layout_height="0dp"
        		android:layout_weight="1"
        		android:id="@+id/text2"
        		android:text="@string/text_copyright"
        		android:textSize="10sp"
        		android:typeface="serif"
        		android:gravity="center"
        		android:textColor="@color/WhiteSmoke"
        		/>
    
    <Button android:layout_width="fill_parent"
        	android:layout_height="0dp"
        	android:layout_weight="1"
        	android:textSize="14sp"
        	android:text="@string/button_continue"
        	android:onClick="nextScreen"
        	/>
    
</LinearLayout>
