<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/beforeInterviewScreen"
    android:background="@color/Black">
  
    <ImageView android:id="@+id/image_skyline"
        	android:layout_weight="8"
        	android:contentDescription="@string/skyline_description"
        	android:layout_width="match_parent"
        	android:layout_height="0dp"
        	android:src="@drawable/chrysler_building"
        	android:scaleType="fitXY"/>
    
    <TextView android:layout_width="fill_parent"
        		android:layout_height="0dp"
        		android:layout_weight="2"
        		android:id="@+id/text2"
        		android:text="@string/text_welcome"
        		android:textSize="15sp"
        		android:textStyle="bold"
        		android:typeface="serif"
        		android:gravity="center"
        		android:textColor="@color/WhiteSmoke"/>
    
    <Button android:layout_width="fill_parent"
        	android:layout_height="0dp"
        	android:layout_weight="1"
        	android:textSize="14sp"
        	android:text="@string/button_continue"
        	android:id="@+id/button_continue_before_interview_starts"
        	android:onClick="init"/>

</LinearLayout>
