<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:columnCount="2"
        android:background="@string/background"
        android:id="@+id/performance_review_screen">
    
    
    
    <TextView 
              android:gravity="center"
        	  android:layout_row="0"
        	  android:layout_column="0"
        	  android:id="@+id/performance_review_textview"        		
        	  android:layout_columnSpan="2"
        	  
        	  android:typeface="serif"
        	  android:text="The economy is $$$$ at the moment. Given this economy and your background, you may apply for the following entry level positions:"
        	  android:textColor="@color/Lime"/>
    
    
    <Space 
        	android:layout_height="20dp"
        	android:layout_row="1"
        	android:layout_column="0"/>
    
    <Space 
        	android:layout_height="20dp"
        	android:layout_row="1"
        	android:layout_column="1"/>
    
    <TextView android:gravity="left"
        	  android:paddingLeft="10dp"
        	  android:layout_row="2"
        	  android:layout_column="0"
        	  android:typeface="serif"
        	  android:textColor="@color/Lime"
        	  android:text="Job Description"/>
    
    <TextView 
        	  android:layout_gravity="right"
        	  android:paddingRight="25dp"
        	  android:layout_row="2"
        	  android:layout_column="1"
        	  android:typeface="serif"
        	  android:textColor="@color/Lime"
        	  android:text="Job Level"/>
    
    <Space 
        	android:layout_height="20dp"
        	android:layout_row="3"
        	android:layout_column="0"/>
    
    <Space 
        	android:layout_height="20dp"
        	android:layout_row="3"
        	android:layout_column="1"/>
    
    <Button android:minWidth="250dp"
        	android:layout_row="4"
        	android:layout_column="0"
        	android:textColor="@color/Lime"
        	android:text="@string/button_job1"
        	android:id="@+id/button_job1"
        	android:onClick="answer"/>
    
    <TextView 
        	  android:layout_gravity="right"
        	  android:paddingRight="50dp"
        	  android:layout_row="4"
        	  android:layout_column="1"
        	  android:typeface="serif"
        	  android:textColor="@color/Lime"
        	  android:text="2"/>
    
    
    <Button android:minWidth="250dp"
        	android:layout_row="5"
        	android:layout_column="0"
        	android:textColor="@color/Lime"
        	android:text="@string/button_job2"
        	android:id="@+id/button_job2"
        	android:onClick="answer"/>
    
    <TextView 
        	  android:layout_gravity="right"
        	  android:paddingRight="50dp"
        	  android:layout_row="5"
        	  android:layout_column="1"
        	  android:typeface="serif"
        	  android:textColor="@color/Lime"
        	  android:text="3"/>
    
    <Button android:minWidth="250dp"
        	android:layout_row="6"
        	android:layout_column="0"
        	android:textColor="@color/Lime"
        	android:text="@string/button_job3"
        	android:id="@+id/button_job3"
        	android:onClick="answer"/>
    
    <TextView 
        	  android:layout_gravity="right"
        	  android:paddingRight="50dp"
        	  android:layout_row="6"
        	  android:layout_column="1"
        	  android:typeface="serif"
        	  android:textColor="@color/Lime"
        	  android:text="4"/>
    
    <Button android:minWidth="250dp"
        	android:layout_row="7"
        	android:layout_column="0"
        	android:textColor="@color/Lime"
        	android:text="@string/button_job4"
        	android:id="@+id/button_job4"
        	android:onClick="answer"/>
    
    <TextView 
        	  android:layout_gravity="right"
        	  android:paddingRight="50dp"
        	  android:layout_row="7"
        	  android:layout_column="1"
        	  android:typeface="serif"
        	  android:textColor="@color/Lime"
        	  android:text="5"/>
    
    
    <Button android:minWidth="250dp"
        	android:layout_row="8"
        	android:layout_column="0"
        	android:textColor="@color/Lime"
        	android:text="@string/button_job5"
        	android:id="@+id/button_job5"
        	android:onClick="answer"/>
    
    <TextView 
        	  android:layout_gravity="right"
        	  android:paddingRight="50dp"
        	  android:layout_row="8"
        	  android:layout_column="1"
        	  android:typeface="serif"
        	  android:textColor="@color/Lime"
        	  android:text="6"/>
    
    <Button android:minWidth="250dp"
        	android:layout_row="9"
        	android:layout_column="0"
        	android:textColor="@color/Lime"
        	android:text="@string/button_job6"
        	android:id="@+id/button_job6"
        	android:onClick="answer"/>
    
    <TextView 
        	  android:layout_gravity="right"
        	  android:paddingRight="50dp"
        	  android:layout_row="9"
        	  android:layout_column="1"
        	  android:typeface="serif"
        	  android:textColor="@color/Lime"
        	  android:text="7"/>
    
    </GridLayout>